[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Gui/Theme.tres" type="Theme" id=3]

[node name="MainMenu" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.69151, 2.3205 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 215.0
margin_top = 461.0
margin_right = 584.0
margin_bottom = 818.0
custom_constants/separation = 32
alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 369.0
margin_bottom = 49.0
text = "GO !"

[node name="HBoxDifficulty" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 369.0
margin_bottom = 130.0
custom_constants/separation = 41
alignment = 1

[node name="DifficultyDown" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxDifficulty"]
margin_left = 52.0
margin_right = 132.0
margin_bottom = 49.0
text = "-"

[node name="Difficulty" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxDifficulty"]
margin_left = 173.0
margin_top = 8.0
margin_right = 195.0
margin_bottom = 41.0
text = "8"
align = 1

[node name="DifficultyUp" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxDifficulty"]
margin_left = 236.0
margin_right = 316.0
margin_bottom = 49.0
text = "+"

[node name="HighScore" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 369.0
margin_bottom = 195.0
text = "High Score: 0"
align = 1

[node name="HBoxControls" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 369.0
margin_bottom = 276.0

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxControls"]
margin_top = 8.0
margin_right = 148.0
margin_bottom = 41.0
text = "Controls:"

[node name="Controls" type="OptionButton" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxControls"]
margin_left = 152.0
margin_right = 369.0
margin_bottom = 49.0
text = "Controls"

[node name="Exit" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 369.0
margin_bottom = 357.0
text = "Quit Game"
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxDifficulty/DifficultyDown" to="." method="_on_DifficultyDown_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxDifficulty/DifficultyUp" to="." method="_on_DifficultyUp_pressed"]
[connection signal="item_selected" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxControls/Controls" to="." method="_on_Controls_item_selected"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
